# python-glpi-utils

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  requirements-dev.txt  setup.cfg  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/scripts/: extract_changelog.py
.github/workflows/: docs.yaml  release.yaml  tests.yaml
api/async_glpi_api/: index.html
api/exceptions/: index.html
api/glpi_api/: index.html
api/logger/: index.html
api/oauth/: index.html
api/version/: index.html
changelog/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: async_glpi_api.md  exceptions.md  glpi_api.md  logger.md  oauth.md  version.md
docs/guides/: authentication.md  crud.md  error_handling.md  installation.md  logging.md  oauth2.md  pagination.md  quickstart.md
examples/api/: basic_usage.py
examples/async_api/: basic_async.py
examples/oauth2/: basic_oauth2.py
glpi_utils/: __init__.py  _resource.py  aio.py  api.py  exceptions.py  logger.py  oauth.py  version.py
guides/authentication/: index.html
guides/crud/: index.html
guides/error_handling/: index.html
guides/installation/: index.html
guides/logging/: index.html
guides/oauth2/: index.html
guides/pagination/: index.html
guides/quickstart/: index.html
search/: search_index.json
tests/: common.py  test_aioapi.py  test_api.py  test_exceptions.py  test_glpi_utils.py  test_logger.py  test_oauth.py  test_pagination.py  test_version.py
