[metadata]
name             = glpi-utils
version          = 1.4.4
author           = Giovanny Rodriguez
author_email     = giovanny@imagunet.com
description      = Python library for working with the GLPI REST API (9.1+, 10.x, 11.x)
long_description = file: README.md
long_description_content_type = text/markdown
license_expression = MIT
license_files    = LICENSE
url              = https://github.com/giovanny07/python-glpi-utils
project_urls     =
    Bug Tracker   = https://github.com/giovanny07/python-glpi-utils/issues
    Changelog     = https://github.com/giovanny07/python-glpi-utils/blob/main/CHANGELOG.md
    Documentation = https://github.com/giovanny07/python-glpi-utils#readme
keywords         = glpi, itsm, api, rest, helpdesk, monitoring, itil
classifiers      =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Internet :: WWW/HTTP

[options]
packages         = find:
python_requires  = >=3.9
install_requires =
    requests>=2.28.0

[options.extras_require]
async =
    aiohttp>=3.9.0
dev   =
    pytest>=7.0
    pytest-asyncio>=0.23
    pytest-cov>=4.0
    mypy>=1.0
    ruff>=0.3
    mkdocs>=1.6
    mkdocs-material>=9.5
    mkdocstrings[python]>=0.25
    mkdocs-autorefs>=1.0

[options.packages.find]
exclude =
    tests*
    examples*

[tool:pytest]
testpaths = tests
addopts   = -v --tb=short
asyncio_mode = auto
asyncio_default_fixture_loop_scope = function

[mypy]
python_version = 3.9
strict         = true
ignore_missing_imports = true
